이미지 경로 상대경로로 변경

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>오늘의 발견 - 쿠팡</title>
-    <link rel="icon" type="image/x-icon" href="/assets/favicon/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="./assets/favicon/favicon.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -38,7 +38,7 @@
             <a class="product-link" href="/">
               <img
                 class="product-img"
-                src="/assets/discovery/honeytea.jpg"
+                src="./assets/discovery/honeytea.jpg"
                 alt="꿀생강차"
               />
             </a>
@@ -63,7 +63,7 @@
             <a class="product-link" href="/">
               <img
                 class="product-img"
-                src="/assets/discovery/vaseline.jpg"
+                src="./assets/discovery/vaseline.jpg"
                 alt="바세린"
               />
             </a>
@@ -89,7 +89,7 @@
             <a class="product-link" href="/">
               <img
                 class="product-img"
-                src="/assets/discovery/handcream.jpg"
+                src="./assets/discovery/handcream.jpg"
                 alt="핸드크림"
               />
             </a>
@@ -114,7 +114,7 @@
             <a class="product-link" href="/">
               <img
                 class="product-img"
-                src="/assets/discovery/bibs.jpg"
+                src="./assets/discovery/bibs.jpg"
                 alt="빕스"
               />
             </a>
@@ -139,7 +139,7 @@
             <a class="product-link" href="/">
               <img
                 class="product-img"
-                src="/assets/discovery/hanssem.jpg"
+                src="./assets/discovery/hanssem.jpg"
                 alt="한샘 수납장"
               />
             </a>
@@ -164,7 +164,7 @@
             <a class="product-link" href="/">
               <img
                 class="product-img"
-                src="/assets/discovery/dumpling.jpg"
+                src="./assets/discovery/dumpling.jpg"
                 alt="개성 왕만두"
               />
             </a>
@@ -190,7 +190,7 @@
             <a class="product-link" href="/">
               <img
                 class="product-img"
-                src="/assets/discovery/wettissue.jpg"
+                src="./assets/discovery/wettissue.jpg"
                 alt="올담 물티슈"
               />
             </a>
@@ -215,7 +215,7 @@
             <a class="product-link" href="/">
               <img
                 class="product-img"
-                src="/assets/discovery/febreze.jpg"
+                src="./assets/discovery/febreze.jpg"
                 alt="페브리즈"
               />
             </a>
@@ -240,7 +240,7 @@
             <a class="product-link" href="/">
               <img
                 class="product-img"
-                src="/assets/discovery/dyson.jpg"
+                src="./assets/discovery/dyson.jpg"
                 alt="다이슨"
               />
             </a>
